Add URDF collision and visual iamges

--- a/teoricas/teorica_04/slides.tex
+++ b/teoricas/teorica_04/slides.tex
@@ -4,7 +4,7 @@
 % para la bibliografía se requiere biber y configurar texstudio
 
 %\documentclass[compress,handout]{beamer}
-\documentclass[compress]{beamer}
+\documentclass[aspectratio=169,compress]{beamer}
 
 % add preamble
 \input{../../common/preamble}
