--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -385,7 +385,7 @@ ros2 pkg create test_pkg --build-type ament_cmake --node-name <node_name> <packa
 \begin{lstlisting}[style=bash] 
 ros2 bag record <topic_name>
 ros2 bag info <bag_file_name>
-ros2 bag play <bag_file\_name>
+ros2 bag play <bag_file_name>
 ros2 bag compress <bag_file_name>
 ros2 bag decompress <bag_file_name>
 ...
@@ -398,16 +398,19 @@ ros2 bag decompress <bag_file_name>
     
     \begin{columns}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[firstline=1, lastline=23]{src/publisher_member_function.cpp}
+            \lstinputlisting[style=cpp,firstline=1,lastline=23]{src/publisher_member_function.cpp}
         \end{column}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[firstline=25, lastline=44]{src/publisher_member_function.cpp}
+            \lstinputlisting[style=cpp,firstline=25,lastline=44]{src/publisher_member_function.cpp}
         \end{column}
     \end{columns}
 	
-	ros2 run cpp\_pubsub talker
-	
-	ros2 run cpp\_pubsub listener
+\begin{lstlisting}[style=bash] 
+ros2 run cpp_pubsub talker
+\end{lstlisting}
+\begin{lstlisting}[style=bash] 
+ros2 run cpp_pubsub listener
+\end{lstlisting}
 	
 \end{frame}
 
@@ -416,10 +419,10 @@ ros2 bag decompress <bag_file_name>
     
     \begin{columns}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[firstline=1, lastline=15]{src/subscriber_member_function.cpp}
+            \lstinputlisting[style=cpp,firstline=1,lastline=15]{src/subscriber_member_function.cpp}
         \end{column}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[firstline=16, lastline=31]{src/subscriber_member_function.cpp}
+            \lstinputlisting[style=cpp,firstline=16,lastline=31]{src/subscriber_member_function.cpp}
         \end{column}
     \end{columns}
     
@@ -430,44 +433,49 @@ ros2 bag decompress <bag_file_name>
     
     \begin{columns}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[firstline=1, lastline=15]{src/CMakeLists.txt}
+            \lstinputlisting[style=cpp,firstline=1,lastline=15]{src/CMakeLists.txt}
         \end{column}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[firstline=16, lastline=28]{src/CMakeLists.txt}
+            \lstinputlisting[style=cpp,firstline=16,lastline=28]{src/CMakeLists.txt}
         \end{column}
     \end{columns}
     
-    ros2 run cpp\_pubsub talker
-    
-    ros2 run cpp\_pubsub listener
-    
+\begin{lstlisting}[style=bash] 
+ros2 run cpp\_pubsub talker
+\end{lstlisting}
+
+\begin{lstlisting}[style=bash] 
+ros2 run cpp\_pubsub listener
+\end{lstlisting}
 \end{frame}
 
 
-\begin{frame}
+\begin{frame}[fragile]
 	\frametitle{Ejemplo completo: Navegación con Turtlebot3}
     
     Guía: \href{https://navigation.ros.org}{https://navigation.ros.org}
     
-    Instalar los paquetes de Nav2 
-    sudo apt install ros-<ros2-distro>-navigation2
+Instalar los paquetes de Nav2 
+\begin{lstlisting}[style=bash] 
+sudo apt install ros-<ros2-distro>-navigation2
+sudo apt install ros-<ros2-distro>-nav2-bringup
+\end{lstlisting}
     
-    sudo apt install ros-<ros2-distro>-nav2-bringup
+Instalar los paquetes de Turtlebot 3
+\begin{lstlisting}[style=bash] 
+sudo apt install ros-<ros2-distro>-turtlebot3*
+\end{lstlisting}
     
-    Instalar los paquetes de Turtlebot 3
-    
-    sudo apt install ros-<ros2-distro>-turtlebot3*
-    
-    Setear las variables de entorno:
-    
-    export TURTLEBOT3\_MODEL=waffle
-    
-    export GAZEBO\_MODEL\_PATH=\$GAZEBO\_MODEL\_PATH:/opt/ros/<ros2-distro>/share/turtlebot3\_gazebo/models
-    
-    
-    ros2 launch nav2\_bringup tb3\_simulation\_launch.py headless:=False
-  
-    
+Setear las variables de entorno:
+\begin{lstlisting}[style=bash] 
+export TURTLEBOT3_MODEL=waffle
+export GAZEBO_MODEL_PATH=$GAZEBO_MODEL_PATH:/opt/ros/<ros2-distro>/share/turtlebot3_gazebo/models
+\end{lstlisting}
+
+\begin{lstlisting}[style=bash] 
+    ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
+\end{lstlisting}
+ 
     https://ros2-industrial-workshop.readthedocs.io/en/latest/\_source/navigation/ROS2-Navigation.html
     
     https://docs.ros.org/en/humble/Tutorials/Advanced/Simulators/Ignition.html
@@ -511,25 +519,26 @@ ros2 bag decompress <bag_file_name>
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
     \frametitle{TF: transformaciones en ROS}
-    
+    \footnotesize
         \begin{columns}
     	\begin{column}{0.5\textwidth}
 		    \begin{itemize}
 				\item TF listeners usan un buffer para escuchar las transformaciones broadcasteads
 				\item Se puede consultar una transformación específica al árbol de transformaciones
 			\end{itemize}
-
-			tf2\_msgs/TFMessage.msg
-			geometry\_msgs/TransformStamped[] transforms
-			std\_msgs/Header header
-			uint32 seqtime stamp
-			string frame\_id
-			string child\_frame\_id
-			geometry\_msgs/Transform transform
-			geometry\_msgs/Vector3 translation
-			geometry\_msgs/Quaternion rotation
+\begin{lstlisting}[style=bash] 
+tf2\_msgs/TFMessage.msg
+geometry\_msgs/TransformStamped[] transforms
+std\_msgs/Header header
+uint32 seqtime stamp
+string frame\_id
+string child\_frame\_id
+geometry\_msgs/Transform transform
+geometry\_msgs/Vector3 translation
+geometry\_msgs/Quaternion rotation
+\end{lstlisting}
     	\end{column}
     	\begin{column}{0.5\textwidth}
     		\includegraphics[width=\columnwidth]{images/tf2_tree_graph.png}
