--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -82,4 +82,13 @@
 	language=Bash
 }
 
+\lstdefinestyle{xml}{
+	language=XML,
+	morekeywords={encoding,xs:schema,xs:element,xs:complexType,xs:sequence,xs:attribute}
+}
+
+\lstdefinestyle{cmake}{
+	language=cmake,
+}
+
 
