Add support to cmake language

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -433,10 +433,10 @@ ros2 run cpp_pubsub listener
     
     \begin{columns}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[style=cpp,firstline=1,lastline=15]{src/CMakeLists.txt}
+            \lstinputlisting[style=cmake,firstline=1,lastline=15]{src/CMakeLists.txt}
         \end{column}
         \begin{column}{0.5\textwidth}
-            \lstinputlisting[style=cpp,firstline=16,lastline=28]{src/CMakeLists.txt}
+            \lstinputlisting[style=cmake,firstline=16,lastline=28]{src/CMakeLists.txt}
         \end{column}
     \end{columns}
     
