--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -34,7 +34,7 @@
 
 % add bibliography resource
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
-\bibliography{./src/bibliography.bib}
+\bibliography{../../common/bibliography.bib}
 
 % Graphic paths
 \graphicspath{{./images/}}
