--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -244,7 +244,7 @@
 
 % ROS Robotics by Example: Bring Life to Your Robot Using ROS Robotic Applications
 @book{fairchild2016ros,
-	author = {Fairchild, Carol and Harman, Thomas L.},
+	author = {Fairchild, Carol and Harman, Thomas L},
 	title = {\href{http://hdl.handle.net/10657.1/888}{ROS Robotics by Example: Bring Life to Your Robot Using ROS Robotic Applications}},
 	year = {2016},
 	isbn = {1785286706},
