--- a/teoricas/teorica_05/slides.tex
+++ b/teoricas/teorica_05/slides.tex
@@ -9,7 +9,7 @@
 % add preamble
 \input{../../common/preamble}
 
-\title{ROS: Robot Operative System}
+\title{Visión por computadora}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
